--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
        <li class="nav-item active"><a href="about.html" class="nav-link">About</a></li>
        <li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
        <li class="nav-item"><a href="cases.html" class="nav-link">Case Study</a></li>
-       <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
+       <!-- <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li> -->
        <li class="nav-item"><a href="contact.html" class="nav-link">Contact us</a></li>
        <li class="nav-item cta"><a href="#" class="nav-link">Free Consultation</a></li>
 
@@ -374,7 +374,7 @@
         <h2 class="ftco-heading-2">Legal</h2>
         <ul class="list-unstyled">
           <li><a href="#" class="py-2 d-block">Join Us</a></li>
-          <li><a href="#" class="py-2 d-block">Blog</a></li>
+          <!-- <li><a href="#" class="py-2 d-block">Blog</a></li> -->
           <li><a href="#" class="py-2 d-block">Privacy &amp; Policy</a></li>
           <li><a href="#" class="py-2 d-block">Terms &amp; Conditions</a></li>
           <li><a href="#" class="py-2 d-block">Careers</a></li>
