--- a/blog-single.html
+++ b/blog-single.html
@@ -53,7 +53,7 @@
        <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
        <li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
        <li class="nav-item"><a href="cases.html" class="nav-link">Case Study</a></li>
-       <li class="nav-item active"><a href="blog.html" class="nav-link">Blog</a></li>
+       <!-- <li class="nav-item active"><a href="blog.html" class="nav-link">Blog</a></li> -->
        <li class="nav-item"><a href="contact.html" class="nav-link">Contact us</a></li>
        <li class="nav-item cta"><a href="#" class="nav-link">Free Consultation</a></li>
 
@@ -69,7 +69,7 @@
     <div class="row no-gutters slider-text align-items-end justify-content-center">
       <div class="col-md-9 ftco-animate pb-5 text-center">
         <h1 class="mb-3 bread">Blog details</h1>
-        <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="fa fa-chevron-right"></i></a></span> <span class="mr-2"><a href="blog.html">Blog <i class="fa fa-chevron-right"></i></a></span> <span>Blog single <i class="fa fa-chevron-right"></i></span></p>
+        <!-- <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="fa fa-chevron-right"></i></a></span> <span class="mr-2"><a href="blog.html">Blog <i class="fa fa-chevron-right"></i></a></span> <span>Blog single <i class="fa fa-chevron-right"></i></span></p> -->
       </div>
     </div>
   </div>
