--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
 					<li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
 					<li class="nav-item"><a href="cases.html" class="nav-link">Case Study</a></li>
-					<li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
+					<!-- <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li> -->
 					<li class="nav-item"><a href="contact.html" class="nav-link">Contact us</a></li>
 					<li class="nav-item cta"><a href="#" class="nav-link">Free Consultation</a></li>
 
@@ -505,7 +505,7 @@
 		</div>
 	</section>
 
-	<section class="ftco-section bg-light">
+	<!-- <section class="ftco-section bg-light">
 		<div class="container">
 			<div class="row justify-content-center mb-5 pb-3">
 				<div class="col-md-7 heading-section text-center ftco-animate">
@@ -569,7 +569,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 	
 	<section class="ftco-appointment ftco-section img" style="background-image: url(images/bg_2.jpg);">
 		<div class="overlay"></div>
@@ -656,7 +656,7 @@
 						<h2 class="ftco-heading-2">Legal</h2>
 						<ul class="list-unstyled">
 							<li><a href="#" class="py-2 d-block">Join Us</a></li>
-							<li><a href="#" class="py-2 d-block">Blog</a></li>
+							<!-- <li><a href="#" class="py-2 d-block">Blog</a></li> -->
 							<li><a href="#" class="py-2 d-block">Privacy &amp; Policy</a></li>
 							<li><a href="#" class="py-2 d-block">Terms &amp; Conditions</a></li>
 							<li><a href="#" class="py-2 d-block">Careers</a></li>
