--- a/blog.html
+++ b/blog.html
@@ -53,7 +53,7 @@
        <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
        <li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
        <li class="nav-item"><a href="cases.html" class="nav-link">Case Study</a></li>
-       <li class="nav-item active"><a href="blog.html" class="nav-link">Blog</a></li>
+       <!-- <li class="nav-item active"><a href="blog.html" class="nav-link">Blog</a></li> -->
        <li class="nav-item"><a href="contact.html" class="nav-link">Contact us</a></li>
        <li class="nav-item cta"><a href="#" class="nav-link">Free Consultation</a></li>
 
