--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>ITSolution - Free Bootstrap 4 Template by Colorlib</title>
+	<title>ITSolutions and Technology | Compuer Planet</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	
@@ -42,7 +42,7 @@
 
 	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 		<div class="container">
-			<a class="navbar-brand" href="index.html">IT<span>solution</span></a>
+			<a class="navbar-brand" href="index.html">Computer<span>Planet</span></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="oi oi-menu"></span> Menu
 			</button>
@@ -70,11 +70,13 @@
 				<div class="col-md-8 ftco-animate mt-5 pt-md-5" data-scrollax=" properties: { translateY: '70%' }">
 					<div class="row">
 						<div class="col-md-7">
-							<p class="mb-4 pl-md-5 line" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">A small river named Duden flows by their place and supplies</p>
+							<p class="mb-4 pl-md-5 line" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">TECHNOLOGY & IT SOLUTIONS</p>
 						</div>
 					</div>
-					<h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Experienced for <br>Every Kinds of ITSolution</h1>
-					<p><a href="#" class="btn btn-primary px-4 py-3">Read more</a></p>
+					<h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Digital Technology,
+						<br>It Solutions & Services Around the World</h1>
+						<p>We are leading technology solutions providing companies all over the world do.</p>
+					<p><a href="#" class="btn btn-primary px-4 py-3">GET STARTED</a></p>
 				</div>
 			</div>
 		</div>
@@ -629,7 +631,7 @@
 			<div class="row mb-5">
 				<div class="col-md">
 					<div class="ftco-footer-widget mb-4">
-						<h2 class="ftco-footer-logo">IT<span>solution</span></h2>
+						<h2 class="ftco-footer-logo">Computer<span>Planet</span></h2>
 						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 						<ul class="ftco-footer-social list-unstyled mt-2">
 							<li class="ftco-animate"><a href="#"><span class="fa fa-twitter"></span></a></li>
