--- a/services.html
+++ b/services.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>ITSolution - Free Bootstrap 4 Template by Colorlib</title>
+  <title>ITSolutions and Technology | Compuer Planet</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   
@@ -42,7 +42,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
  <div class="container">
-   <a class="navbar-brand" href="index.html">IT<span>solution</span></a>
+   <a class="navbar-brand" href="index.html">Computer<span>Planet</span></a>
    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
      <span class="oi oi-menu"></span> Menu
    </button>
@@ -89,8 +89,8 @@
        <div class="line"></div>
        <div class="icon"><span class="flaticon-web-programming"></span></div>
        <div class="media-body">
-        <h3 class="heading mb-3">Web Development</h3>
-        <p>	203 Fake St. Mountain View, San Francisco, California, USA</p>
+        <h3 class="heading mb-3">E-Commerce Developmnt</h3>
+        <p>E-commerce is the most effective strategy to increase sales and grow your offline business. We offer both WordPress and core development services.</p>
       </div>
     </div>      
   </div>
@@ -99,8 +99,8 @@
      <div class="line"></div>
      <div class="icon"><span class="flaticon-stats"></span></div>
      <div class="media-body">
-      <h3 class="heading mb-3">Database Analysis</h3>
-      <p>A small river named Duden flows by their place and supplies.</p>
+      <h3 class="heading mb-3">Social Media Marketing</h3>
+      <p>We offer the following services: The use of social media platforms to connect with your audience in order to promote your brand, improve sales, and drive website traffic is known as social media marketing.</p>
     </div>
   </div>    
 </div>
@@ -109,8 +109,8 @@
    <div class="line"></div>
    <div class="icon"><span class="flaticon-secure"></span></div>
    <div class="media-body">
-    <h3 class="heading mb-3">Server Security</h3>
-    <p>A small river named Duden flows by their place and supplies.</p>
+    <h3 class="heading mb-3">SEO Counsulting</h3>
+    <p>Computer planet has an expert team for Search Engine Optimization (SEO), Search Engine Marketing (SEM), we believe in delivering high-quality work.</p>
   </div>
 </div>      
 </div>
@@ -119,8 +119,8 @@
    <div class="line"></div>
    <div class="icon"><span class="flaticon-presentation"></span></div>
    <div class="media-body">
-    <h3 class="heading mb-3">UX/UI Strategy</h3>
-    <p>A small river named Duden flows by their place and supplies.</p>
+    <h3 class="heading mb-3">Web Design</h3>
+    <p>Web design refers to the design of websites that are displayed on the internet. It is usually used for the visualization of valuable information on social platforms or the internet where users and customers can easily get access or information.</p>
   </div>
 </div>      
 </div>
@@ -305,7 +305,7 @@
     <div class="row mb-5">
       <div class="col-md">
         <div class="ftco-footer-widget mb-4">
-          <h2 class="ftco-footer-logo">IT<span>solution</span></h2>
+          <h2 class="ftco-footer-logo">Computer<span>Planet</span></h2>
           <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
           <ul class="ftco-footer-social list-unstyled mt-2">
             <li class="ftco-animate"><a href="#"><span class="fa fa-twitter"></span></a></li>
