--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
 		<div class="container">
 			<div class="row justify-content-between">
 				<div class="col-12 col-md d-flex align-items-center">
-					<p class="mb-0 phone"><span class="mailus">Phone no:</span> <a href="#">+00 1234 567</a> or <span class="mailus">email us:</span> <a href="#">emailsample@email.com</a></p>
+					<p class="mb-0 phone"><span class="mailus">Phone no:</span> <a href="#">0406 909 930</a> or <span class="mailus">email us:</span> <a href="#">info@computersplanet.com.au</a></p>
 				</div>
 				<div class="col-12 col-md d-flex justify-content-md-end">
 					<div class="social-media">
@@ -52,7 +52,7 @@
 					<li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
 					<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
 					<li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
-					<li class="nav-item"><a href="cases.html" class="nav-link">Case Study</a></li>
+					<!-- <li class="nav-item"><a href="cases.html" class="nav-link">Case Study</a></li> -->
 					<!-- <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li> -->
 					<li class="nav-item active"><a href="contact.html" class="nav-link">Contact us</a></li>
 					<li class="nav-item cta"><a href="#" class="nav-link">Free Consultation</a></li>
@@ -82,43 +82,33 @@
 				<div class="col-md-12">
 					<div class="wrapper px-md-4">
 						<div class="row mb-5">
-							<div class="col-md-3">
+							<div class="col-md-4">
 								<div class="dbox w-100 text-center">
 									<div class="icon d-flex align-items-center justify-content-center">
 										<span class="fa fa-map-marker"></span>
 									</div>
 									<div class="text">
-										<p><span>Address:</span> 198 West 21th Street, Suite 721 New York NY 10016</p>
+										<p><span>Address:</span>Sydney Branch- Suite-3, level-1, 15-21 NINTH AVENUE, CAMPSIE, NSW, 2194</p>
 									</div>
 								</div>
 							</div>
-							<div class="col-md-3">
+							<div class="col-md-4">
 								<div class="dbox w-100 text-center">
 									<div class="icon d-flex align-items-center justify-content-center">
 										<span class="fa fa-phone"></span>
 									</div>
 									<div class="text">
-										<p><span>Phone:</span> <a href="tel://1234567920">+ 1235 2355 98</a></p>
+										<p><span>Phone:</span> <a href="tel://1234567920">0406 909 930</a></p>
 									</div>
 								</div>
 							</div>
-							<div class="col-md-3">
+							<div class="col-md-4">
 								<div class="dbox w-100 text-center">
 									<div class="icon d-flex align-items-center justify-content-center">
 										<span class="fa fa-paper-plane"></span>
 									</div>
 									<div class="text">
-										<p><span>Email:</span> <a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-3">
-								<div class="dbox w-100 text-center">
-									<div class="icon d-flex align-items-center justify-content-center">
-										<span class="fa fa-globe"></span>
-									</div>
-									<div class="text">
-										<p><span>Website</span> <a href="#">yoursite.com</a></p>
+										<p><span>Email:</span> <a href="mailto:info@computersplanet.com.au">info@computersplanet.com.au</a></p>
 									</div>
 								</div>
 							</div>
@@ -179,7 +169,7 @@
 				<div class="col-md">
 					<div class="ftco-footer-widget mb-4">
 						<h2 class="ftco-footer-logo">Computer<span>Planet</span></h2>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+						<p>Computers Planet's goal is to create visually appealing websites that push the boundaries of this new medium. Each assignment is an opportunity for us to lend a hand in the pursuit of high-quality work. What type of project do you want us to work on?</p>
 						<ul class="ftco-footer-social list-unstyled mt-2">
 							<li class="ftco-animate"><a href="#"><span class="fa fa-twitter"></span></a></li>
 							<li class="ftco-animate"><a href="#"><span class="fa fa-facebook"></span></a></li>
@@ -218,9 +208,9 @@
 						<h2 class="ftco-heading-2">Have a Questions?</h2>
 						<div class="block-23 mb-3">
 							<ul>
-								<li><span class="icon fa fa-map marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-								<li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-								<li><a href="#"><span class="icon fa fa-paper-plane pr-4"></span><span class="text">info@yourdomain.com</span></a></li>
+								<li><span class="icon fa fa-map marker"></span><span class="text"> Canberra Branch- Suite 124 Level 1, 33 ALLARA STREET CANBERRA, ACT 2601</span></li>
+								<li><a href="#"><span class="icon fa fa-phone"></span><span class="text">0406 909 930</span></a></li>
+								<li><a href="#"><span class="icon fa fa-paper-plane pr-4"></span><span class="text">contact.sydney@computersplanet.com.au</span></a></li>
 							</ul>
 						</div>
 					</div>
@@ -230,7 +220,7 @@
 				<div class="col-md-12 text-center">
 
 					<p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-						Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+						Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved  
 						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 					</div>
 				</div>
