--- a/contact.html
+++ b/contact.html
@@ -1,38 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<title>ITSolutions and Technology | Compuer Planet</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700,800&display=swap" rel="stylesheet">
+
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700,800&display=swap"
+		rel="stylesheet">
 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<link rel="stylesheet" href="css/animate.css">
-	
+
 	<link rel="stylesheet" href="css/owl.carousel.min.css">
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
 	<link rel="stylesheet" href="css/magnific-popup.css">
 
-	
+
 	<link rel="stylesheet" href="css/flaticon.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 	<div class="wrap">
 		<div class="container">
 			<div class="row justify-content-between">
 				<div class="col-12 col-md d-flex align-items-center">
-					<p class="mb-0 phone"><span class="mailus">Phone no:</span> <a href="#">0406 909 930</a> or <span class="mailus">email us:</span> <a href="#">info@computersplanet.com.au</a></p>
+					<p class="mb-0 phone"><span class="mailus">Phone no:</span> <a href="#">0406 909 930</a> or <span
+							class="mailus">email us:</span> <a
+							href="mailto:info@computersplanet.com.au">info@computersplanet.com.au</a>
+					</p>
 				</div>
 				<div class="col-12 col-md d-flex justify-content-md-end">
 					<div class="social-media">
 						<p class="mb-0 d-flex">
-							<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"><i class="sr-only">Facebook</i></span></a>
-							<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"><i class="sr-only">Twitter</i></span></a>
-							<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-instagram"><i class="sr-only">Instagram</i></span></a>
-							<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-dribbble"><i class="sr-only">Dribbble</i></span></a>
+							<a href="#" class="d-flex align-items-center justify-content-center"><span
+									class="fa fa-facebook"><i class="sr-only">Facebook</i></span></a>
+							<a href="#" class="d-flex align-items-center justify-content-center"><span
+									class="fa fa-twitter"><i class="sr-only">Twitter</i></span></a>
+							<a href="#" class="d-flex align-items-center justify-content-center"><span
+									class="fa fa-instagram"><i class="sr-only">Instagram</i></span></a>
+							<a href="#" class="d-flex align-items-center justify-content-center"><span
+									class="fa fa-dribbble"><i class="sr-only">Dribbble</i></span></a>
 						</p>
 					</div>
 				</div>
@@ -42,8 +52,10 @@
 
 	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 		<div class="container">
-			<a class="navbar-brand" href="index.html">Computer<span>Planet</span></a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+			<a class="navbar-brand" href="index.html"><img src="images/demo-logo.png" alt="ComputerPlanet"
+					width="200px"></a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
+				aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="oi oi-menu"></span> Menu
 			</button>
 
@@ -55,27 +67,30 @@
 					<!-- <li class="nav-item"><a href="cases.html" class="nav-link">Case Study</a></li> -->
 					<!-- <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li> -->
 					<li class="nav-item active"><a href="contact.html" class="nav-link">Contact us</a></li>
-					<li class="nav-item cta"><a href="#" class="nav-link">Free Consultation</a></li>
+					<li class="nav-item cta"><a href="contact.html" class="nav-link">Free Consultation</a></li>
 
 				</ul>
 			</div>
 		</div>
 	</nav>
 	<!-- END nav -->
-	
-	<section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_3.jpg');" data-stellar-background-ratio="0.5">
+
+	<section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_3.jpg');"
+		data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row no-gutters slider-text align-items-end justify-content-center">
 				<div class="col-md-9 ftco-animate pb-5 text-center">
 					<h1 class="mb-3 bread">Contact us</h1>
-					<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="fa fa-chevron-right"></i></a></span> <span>Contact us <i class="fa fa-chevron-right"></i></span></p>
+					<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i
+									class="fa fa-chevron-right"></i></a></span> <span>Contact us <i
+								class="fa fa-chevron-right"></i></span></p>
 				</div>
 			</div>
 		</div>
 	</section>
 
-	
+
 	<section class="ftco-section bg-light">
 		<div class="container">
 			<div class="row justify-content-center">
@@ -88,7 +103,8 @@
 										<span class="fa fa-map-marker"></span>
 									</div>
 									<div class="text">
-										<p><span>Address:</span>Sydney Branch- Suite-3, level-1, 15-21 NINTH AVENUE, CAMPSIE, NSW, 2194</p>
+										<p><span>Address:</span>Sydney Branch- Suite-3, level-1, 15-21 NINTH AVENUE,
+											CAMPSIE, NSW, 2194</p>
 									</div>
 								</div>
 							</div>
@@ -108,7 +124,11 @@
 										<span class="fa fa-paper-plane"></span>
 									</div>
 									<div class="text">
-										<p><span>Email:</span> <a href="mailto:info@computersplanet.com.au">info@computersplanet.com.au</a></p>
+										<p><span>Email:</span> <a
+												href="mailto:info@computersplanet.com.au">info@computersplanet.com.au</a><br>
+											<a
+												href="mailto:contact.sydney@computersplanet.com.au">contact.sydney@computersplanet.com.au</a>
+										</p>
 									</div>
 								</div>
 							</div>
@@ -122,25 +142,29 @@
 											<div class="col-md-6">
 												<div class="form-group">
 													<label class="label" for="name">Full Name</label>
-													<input type="text" class="form-control" name="name" id="name" placeholder="Name">
+													<input type="text" class="form-control" name="name" id="name"
+														placeholder="Name">
 												</div>
 											</div>
-											<div class="col-md-6"> 
+											<div class="col-md-6">
 												<div class="form-group">
 													<label class="label" for="email">Email Address</label>
-													<input type="email" class="form-control" name="email" id="email" placeholder="Email">
+													<input type="email" class="form-control" name="email" id="email"
+														placeholder="Email">
 												</div>
 											</div>
 											<div class="col-md-12">
 												<div class="form-group">
 													<label class="label" for="subject">Subject</label>
-													<input type="text" class="form-control" name="subject" id="subject" placeholder="Subject">
+													<input type="text" class="form-control" name="subject" id="subject"
+														placeholder="Subject">
 												</div>
 											</div>
 											<div class="col-md-12">
 												<div class="form-group">
 													<label class="label" for="#">Message</label>
-													<textarea name="message" class="form-control" id="message" cols="30" rows="4" placeholder="Message"></textarea>
+													<textarea name="message" class="form-control" id="message" cols="30"
+														rows="4" placeholder="Message"></textarea>
 												</div>
 											</div>
 											<div class="col-md-12">
@@ -168,8 +192,10 @@
 			<div class="row mb-5">
 				<div class="col-md">
 					<div class="ftco-footer-widget mb-4">
-						<h2 class="ftco-footer-logo">Computer<span>Planet</span></h2>
-						<p>Computers Planet's goal is to create visually appealing websites that push the boundaries of this new medium. Each assignment is an opportunity for us to lend a hand in the pursuit of high-quality work. What type of project do you want us to work on?</p>
+						<h2 class="ftco-footer-logo"><img src="images/demo-logo.png" alt="ComputerPlanet" width="200px">
+						</h2>
+						<p>Computers Planet's goal is to create visually appealing websites that push the boundaries of
+							this new medium.</p>
 						<ul class="ftco-footer-social list-unstyled mt-2">
 							<li class="ftco-animate"><a href="#"><span class="fa fa-twitter"></span></a></li>
 							<li class="ftco-animate"><a href="#"><span class="fa fa-facebook"></span></a></li>
@@ -181,12 +207,12 @@
 					<div class="ftco-footer-widget mb-4 ml-md-5">
 						<h2 class="ftco-heading-2">Explore</h2>
 						<ul class="list-unstyled">
-							<li><a href="#" class="py-2 d-block">About</a></li>
-							<li><a href="#" class="py-2 d-block">Contact</a></li>
-							<li><a href="#" class="py-2 d-block">What We Do</a></li>
-							<li><a href="#" class="py-2 d-block">Plans &amp; Pricing</a></li>
-							<li><a href="#" class="py-2 d-block">Refund Policy</a></li>
-							<li><a href="#" class="py-2 d-block">Call Us</a></li>
+							<li><a href="about.html" class="py-2 d-block">About</a></li>
+							<li><a href="contact.html" class="py-2 d-block">Contact</a></li>
+							<li><a href="services.html" class="py-2 d-block">What We Do</a></li>
+
+
+							<li><a href="contact.html" class="py-2 d-block">Call Us</a></li>
 						</ul>
 					</div>
 				</div>
@@ -198,8 +224,8 @@
 							<!-- <li><a href="#" class="py-2 d-block">Blog</a></li> -->
 							<li><a href="#" class="py-2 d-block">Privacy &amp; Policy</a></li>
 							<li><a href="#" class="py-2 d-block">Terms &amp; Conditions</a></li>
-							<li><a href="#" class="py-2 d-block">Careers</a></li>
-							<li><a href="#" class="py-2 d-block">Contact</a></li>
+
+							<li><a href="contact.html" class="py-2 d-block">Contact</a></li>
 						</ul>
 					</div>
 				</div>
@@ -208,45 +234,56 @@
 						<h2 class="ftco-heading-2">Have a Questions?</h2>
 						<div class="block-23 mb-3">
 							<ul>
-								<li><span class="icon fa fa-map marker"></span><span class="text"> Canberra Branch- Suite 124 Level 1, 33 ALLARA STREET CANBERRA, ACT 2601</span></li>
-								<li><a href="#"><span class="icon fa fa-phone"></span><span class="text">0406 909 930</span></a></li>
-								<li><a href="#"><span class="icon fa fa-paper-plane pr-4"></span><span class="text">contact.sydney@computersplanet.com.au</span></a></li>
+								<li><span class="icon fa fa-map marker"></span><span class="text"> Canberra Branch-
+										Suite 124 Level 1, 33 ALLARA STREET CANBERRA, ACT 2601</span></li>
+								<li><a href="#"><span class="icon fa fa-phone"></span><span class="text">0406 909
+											930</span></a></li>
+								<li><a href="#"><span class="icon fa fa-paper-plane pr-4"></span><span
+											class="text">contact.sydney@computersplanet.com.au</span></a></li>
 							</ul>
 						</div>
 					</div>
 				</div>
 			</div>
-			<div class="row">
+			<!-- <div class="row">
 				<div class="col-md-12 text-center">
 
-					<p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-						Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved  
-						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-					</div>
+					<p>
+						Copyright &copy;
+						<script>document.write(new Date().getFullYear());</script> All rights reserved
+
+					</p>
 				</div>
-			</div>
-		</footer>
-		
-		
-
-		<!-- loader -->
-		<div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
+			</div> -->
+		</div>
+	</footer>
 
 
-		<script src="js/jquery.min.js"></script>
-		<script src="js/jquery-migrate-3.0.1.min.js"></script>
-		<script src="js/popper.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
-		<script src="js/jquery.easing.1.3.js"></script>
-		<script src="js/jquery.waypoints.min.js"></script>
-		<script src="js/jquery.stellar.min.js"></script>
-		<script src="js/owl.carousel.min.js"></script>
-		<script src="js/jquery.magnific-popup.min.js"></script>
-		<script src="js/jquery.animateNumber.min.js"></script>
-		<script src="js/scrollax.min.js"></script>
-		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-		<script src="js/google-map.js"></script>
-		<script src="js/main.js"></script>
-		
-	</body>
-	</html>
+
+	<!-- loader -->
+	<div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
+			<circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
+			<circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10"
+				stroke="#F96D00" />
+		</svg></div>
+
+
+	<script src="js/jquery.min.js"></script>
+	<script src="js/jquery-migrate-3.0.1.min.js"></script>
+	<script src="js/popper.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/jquery.easing.1.3.js"></script>
+	<script src="js/jquery.waypoints.min.js"></script>
+	<script src="js/jquery.stellar.min.js"></script>
+	<script src="js/owl.carousel.min.js"></script>
+	<script src="js/jquery.magnific-popup.min.js"></script>
+	<script src="js/jquery.animateNumber.min.js"></script>
+	<script src="js/scrollax.min.js"></script>
+	<script
+		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+	<script src="js/google-map.js"></script>
+	<script src="js/main.js"></script>
+
+</body>
+
+</html>
