--- a/index.html
+++ b/index.html
@@ -161,9 +161,8 @@
 						<div class="line"></div>
 						<div class="icon"><span class="flaticon-web-programming"></span></div>
 						<div class="media-body">
-							<h3 class="heading mb-3">IT Support</h3>
-							<p>Get reliable IT support services tailored to your needs, ensuring smooth operations and
-								quick resolution of technical issues to keep your business running efficiently.</p>
+							<h3 class="heading mb-3">Web Design and Development</h3>
+							<p>Get professional web design and development services customized to your requirements, ensuring seamless online presence and efficient functionality to enhance your business.</p>
 						</div>
 					</div>
 				</div>
@@ -172,10 +171,9 @@
 						<div class="line"></div>
 						<div class="icon"><span class="flaticon-stats"></span></div>
 						<div class="media-body">
-							<h3 class="heading mb-3">System Setups</h3>
-							<p>Our expert team specializes in seamless system setups, providing customized
-								configurations and installations to optimize your IT infrastructure for maximum
-								performance and productivity.</p>
+							<h3 class="heading mb-3">Software Development</h3>
+							<p>Access expert software development services crafted to meet your specific needs, facilitating streamlined processes and effective solutions to propel your business forward.</p>
+						</div>
 						</div>
 					</div>
 				</div>
